clusters/cl01tl/manifests/sonarr-4k/HTTPRoute-sonarr-4k.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-4k
  labels:
    app.kubernetes.io/instance: sonarr-4k
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sonarr-4k
    helm.sh/chart: sonarr-4k-5.3.0
  namespace: sonarr-4k
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "sonarr-4k.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr-4k
          namespace: sonarr-4k
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
